RESOLVED FIXED157576
ARMv7Assembler: suppress a -Wnarrowing warning when compiling with GCC
https://bugs.webkit.org/show_bug.cgi?id=157576
Summary ARMv7Assembler: suppress a -Wnarrowing warning when compiling with GCC
Zan Dobersek
Reported 2016-05-11 11:52:14 PDT
ARMv7Assembler: suppress a -Wnarrowing warning when compiling with GCC
Attachments
Patch (1.83 KB, patch)
2016-05-11 11:57 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2016-05-11 11:57:24 PDT
Zan Dobersek
Comment 2 2016-05-11 11:57:54 PDT
../Source/JavaScriptCore/assembler/ARMv7Assembler.h: In static member function ‘static void JSC::ARMv7Assembler::revertJumpTo_movT3movtcmpT2(void*, JSC::ARMv7Assembler::RegisterID, JSC::ARMv7Assembler::RegisterID, uintptr_t)’: ../Source/JavaScriptCore/assembler/ARMv7Assembler.h:1335:27: warning: narrowing conversion of ‘(((int)left) | 60336)’ from ‘int’ to ‘uint16_t {aka short unsigned int}’ inside { } [-Wnarrowing] OP_CMP_reg_T2 | left
Csaba Osztrogonác
Comment 3 2016-05-11 23:01:14 PDT
Comment on attachment 278648 [details] Patch r=me
WebKit Commit Bot
Comment 4 2016-05-11 23:22:30 PDT
Comment on attachment 278648 [details] Patch Clearing flags on attachment: 278648 Committed r200742: <http://trac.webkit.org/changeset/200742>
WebKit Commit Bot
Comment 5 2016-05-11 23:22:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.